--- a/packages/gatsby-theme-docs/package.json
+++ b/packages/gatsby-theme-docs/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.5",
+    "@mdx-js/react": "^1.5.5",
+    "gatsby-plugin-mdx": "^1.0.67",
+    "gatsby-source-filesystem": "^2.1.46",
     "mkdirp": "^0.5.1"
   }
 }
